<resources>
    <string name="app_name">Rice Shop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_info">Log in</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_click">REGISTER</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="menu_text">Menu</string>
    <string name="order_text">Order</string>
    <string name="payment_text">Payment</string>
    <string name="about_text">About</string>
    <string name="search">Search</string>
    <string name="article_text">Company started its operation
        \nin 2017, and has become
        \nfocusing on rice business. The
        \nbusiness covers an extensive
        \nscale of activities ranging
        \nfrom processing,packaging to
        \nproducing more than 5
        \ndifferent varieties of rice
        \nproduct under the flagship.
        \n\nRenowned household names like
        \n1. Jati,
        \n2. Kapal Layar
        \n3. Carnation,
        \n4. Fres-Harves.
        \n5. ecoBrown\'s</string>


    <string name="menu">Menu</string>
    <string name="jati_super">Jati Super</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jati_rebus">Jati Rebus</string>
    <string name="ecobrown_s_original">ecoBrown\'s ORIGINAL</string>
    <string name="ecobrown_s_gold">ecoBrown\'s GOLD</string>
    <string name="carnation_apple_goldr">Carnation Apple Goldr</string>
    <string name="kapal_layar_biru">Kapal Layar Biru</string>
    <string name="detail_jati_super">Detail</string>
    <string name="jati_super_special">Jati Super Special</string>
    <string name="rm19_00">RM19.00</string>
    <string name="grade_of_rice_thai_super_special_5">GRADE OF RICE : Thai Super Special 5%</string>
    <string name="packing_size_5kg">PACKING SIZE : 5kg</string>
    <string name="country_of_origin_thailand">COUNTRY OF ORIGIN : Thailand</string>
    <string name="texture_medium_hard">TEXTURE : Medium Hard</string>
    <string name="detail_rebus">Detail</string>
    <string name="rm20_00_rebus">RM20.00</string>
    <string name="grade_of_rice_local_super_long_grain_5_rebus">GRADE OF RICE : Local Super Long Grain 5%</string>
    <string name="packing_size_5kg_rebus">PACKING SIZE : 5kg</string>
    <string name="texture_hard_rebus">TEXTURE : Hard</string>
    <string name="detail_apple_gold">Detail</string>
    <string name="carnation_apple_gold">Carnation Apple Gold</string>
    <string name="rm32_00_apple_gold">RM32.00</string>
    <string name="grade_of_rice_super_import_apple_gold">GRADE OF RICE : Super Import</string>
    <string name="packing_size_5kg_apple_gold">PACKING SIZE : 5kg</string>
    <string name="country_of_origin_thailand_apple_gold">COUNTRY OF ORIGIN : Thailand</string>
    <string name="texture_soft_and_mild_aromatic_apple_gold">TEXTURE : Soft and Mild Aromatic</string>
    <string name="add_order_apple_gold">ADD ORDER</string>
    <string name="add_order_kapal">ADD ORDER</string>
    <string name="add_order_jati_super">ADD ORDER</string>
    <string name="detail_eco_gold">Detail</string>
    <string name="ecobrown_s_gold_name">ecoBrown\'s GOLD</string>
    <string name="rm30_00_eco_gold">RM30.00</string>
    <string name="ingredient_brown_rice_red_rice_black_rice_eco_gold">INGREDIENT : Brown Rice, Red Rice, Black Rice</string>
    <string name="packing_size_5kg_eco_gold">PACKING SIZE : 5kg</string>
    <string name="country_of_origin_malaysia_eco_gold">COUNTRY OF ORIGIN : Malaysia</string>
    <string name="texture_medium_hard_and_chewy_eco_gold">TEXTURE ；Medium Hard and Chewy</string>
    <string name="add_order_eco_gold">ADD ORDER</string>
    <string name="detail_eco_org">Detail</string>
    <string name="ecobrown_s_original_eco_org">ecoBrown\'s ORIGINAL</string>
    <string name="rm22_00_eco_org">RM22.00</string>
    <string name="ingredient_100_natural_brown_rice_eco_org">INGREDIENT : 100% Natural Brown Rice</string>
    <string name="packing_size_5kg_eco_org">PACKING SIZE : 5kg</string>
    <string name="country_of_origin_malaysia_eco_org">COUNTRY OF ORIGIN : Malaysia</string>
    <string name="texture_medium_hard_and_chewy_eco_org">TEXTURE : Medium Hard and Chewy</string>
    <string name="add_order_eco_org">ADD ORDER</string>
    <string name="detail_jati_rebus">Detail</string>
    <string name="rm23_00_jati_rebus">RM23.00</string>
    <string name="grade_of_rice_parboiled_rice_aaa_jati_rebus">GRADE OF RICE : Parboiled Rice (AAA)</string>
    <string name="packing_size_5kg_jati_rebus">PACKING SIZE : 5kg</string>
    <string name="country_of_origin_malaysia_jati_rebus">COUNTRY OF ORIGIN : Malaysia</string>
    <string name="texture_medium_hard_and_fluffy_jati_rebus">TEXTURE : Medium Hard and Fluffy</string>
    <string name="add_order_jati_rebus">ADD ORDER</string>
    <string name="order">Order</string>
</resources>